<resources>
    <string name="app_name">Characters Rating</string>
    <string name="url">Url</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="enter_count_of_wins">Enter count of wins</string>
    <string name="enter_new_url_of_character_photo">Enter new URL of character photo</string>
    <string name="enter_count_of_games_you_played">Enter count of games you played</string>
    <string name="enter_count_of_wins_you_made">Enter count of wins you made</string>
    <string name="enter_count_of_kills_you_made">Enter count of kills you made</string>
    <string name="enter_count_of_kills">Enter count of kills</string>
    <string name="enter_count_of_games">Enter count of games</string>
    <string name="enter_url_of_character_photo">Enter URL of character photo</string>
    <string name="enter_character_name">Enter character name</string>
    <string name="add_a_new_character">Add a new character</string>
    <string name="change_the_character">Change data of the character</string>
    <string name="percentageOfWins">WinReit - </string>
    <string name="percent">%</string>
    <string name="KD">K/D - </string>
    <string name="not_be_less_than_1">Cannot be less than 1</string>
    <string name="not_be_less_than_0">Cannot be less than 0</string>
    <string name="error_empty_field">Fill in the field</string>
    <string name="back">Back</string>
    <string name="kills">Kills - </string>
    <string name="count_games">Count Games</string>
    <string name="count_wins">Count Wins</string>
    <string name="count_kills">Count Kills</string>
    <string name="sort">SORT</string>
    <string-array name="sort_array">
        <item>Names</item>
        <item>Count Games</item>
        <item>Count Kills</item>
        <item>Count Wins</item>
        <item>Win Reit</item>
        <item>K/D</item>
    </string-array>

</resources>